add readmi & fix

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vocabbuilder",
-  "private": true,
+  "private": false,
+  "author": "Mykhajlo-Berezhnyj",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
